--- a/nav.html
+++ b/nav.html
@@ -25,37 +25,37 @@
     	<ul class="navbar-nav">
     		<li class="nav-item ">
     			<a class="nav-link active" aria-current="page" href="#">
-    				friut
+    				Fruit
     			</a>
     		</li>
     		<li class="nav-item">
     			<a class="nav-link" href="#">
-    				vegetable
+    				Vegetable
     			</a>
     		</li>
     		<li class="nav-item">
     			<a class="nav-link" href="#">
-    				pastries
+    				Pastries
     			</a>
     		</li>
     		<li class="nav-item ">
     			<a class="nav-link disabled" href="#">
-    				drinks
+    				Drinks
     			</a>
     		</li>
     		<li class="nav-item dropdown" id="dropdown">
     			<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"aria-expanded="false">
-    				library
+    				Library
     			</a>
     			<ul class="dropdown-menu bg-primary">
     				<li>
-    					<a class="dropdown-item" href="#"> books</a>
+    					<a class="dropdown-item" href="#"> Books</a>
     				</li>
     				<li>
-    					<a class="dropdown-item" href="#"> pens</a>
+    					<a class="dropdown-item" href="#"> Pens</a>
     				</li>
     				<li>
-    					<a class="dropdown-item" href="#"> papers</a>
+    					<a class="dropdown-item" href="#"> Papers</a>
     				</li>
     				
     			</ul>
