editing the grid

--- a/nav.html
+++ b/nav.html
@@ -159,61 +159,43 @@
 	
     </div>
     </section>
-
 	<div class="container " id="div2">
 		<h3 id="head"> What we do </h3> 
 		<p>MEST is an Africa-wide technology enterpreneur training program, internal seed fund, and network of hubs offering  incubation for technology startups in Africa. </p>
-
 		<p id="break"> For young aspiring and established African entrepreneurs, MEST Africa provides the skills, mindset, and provides the skills, mindset, and experiences to build a globally successful tech company. Beyond tech and entrepreneurial skills training, MEST Africa provides a real-world advantage to entreprneurs through funding, business incubation, and access to a global tech network.</p>
-
 	</div>
-
 	<div class="container-fluid  py-5 px-5"  id="maindiv" style="height: 85vh">
-
 	<div  class="grid-container"  style="height: 75vh"> 
-
 		<div class="sub">
-
 			<img src="./asset/picture 1.png" style=" margin-left: 80px;">
+			<h3> We provide skills in Tech Entrepreneurship</h3>
+			<p>Prepare yourself for the rigors of entrepreneurship with our fully sponsored, graduate-level program in Software Development and Business</p>
 			
-            <h4 id="head2" > We provide skills in Tech Entrepreneurship</h4>
-			
-            <p  id="para">Prepare yourself for the rigors of entrepreneurship with our fully sponsored, graduate-level program in Software Development and Business</p>
-			
-			<button class="btn btn-info" id="btn2">
+			<button class="btn btn-info">
 				
-				<a href="#" id="link1"> Learn More </a>
+				<a href="#" style="color: #fff"> Learn More </a>
 			
 			</button>
 		</div>
-		
-        <div class="sub">
-			
-            <img src="./asset/picture2.png" style="margin-left: 80px;"> 
-			
-            <h4  id="head2"> We support early-stage startups to take off</h4>
-			
-            <p id="para"> Get the opportunity to launch your technology business with seed funding between $50k-$250k, incubation, and access to a global tech community.</p>
-		
-		<button class="btn btn-info" id="btn2">
-
-			<a href="#" id="link1"> Learn More </a>
-		
-			</button>
-
-		</div>
-
 		<div class="sub">
+			<img src="./asset/picture2.png" style="margin-left: 80px;"> 
+			<h3> We support early-stage starups to take off</h3>
+			<p> Get the opportunity to launch your technology business with seed funding between $50k-$250k, incubation, and access to a global tech community.</p>
+		
+		<button class="btn btn-info">
 
-			<img src="./asset/picture3.png">
+			<a href="#" style="color: #fff"> Learn More </a>
+		
+			</button>
+
+		</div>
+		<div class="sub">
+			<img src="./asset/picture3.png" style="margin-left: 80px;">
+			<h3> We bring the tech & startup community together</h3>
+			<p> Our Hubs provide startups with business support & networking across the startup lifecycle and also serve as ecosystem centers for the tech community.</p>
+			<button class="btn btn-info">
 			
-            <h4 id="head2"> We bring the tech & startup community together</h4>
-			
-            <p id="para"> Our Hubs provide startups with business support & networking across the startup lifecycle and also serve as ecosystem centers for the tech community.</p>
-			
-            <button class="btn btn-info" id="btn2" style="margin-left: 90px">
-			
-            <a href="#" id="link1"> Learn More </a>	
+            <a href="#" style="color: #fff"> Learn More </a>	
 			
 			</button>
 		</div>
