more grids input.

--- a/index.html
+++ b/index.html
@@ -220,6 +220,35 @@
 
 	</div>
    </div>
+   <div class="container-fluid " style="height: 80vh">
+
+    <div  id="impact"  class="border-bottom border-dark">  Our impact </div>
+
+       <div class="container-fluid row justify-content-center" style="height: 40vh" id="bigbox">
+
+           <div class="col-2 border border-5 border-dark" id="smallbox">
+
+             <h3 style="font-size: 60px">1000+</h3>  
+
+             <p style="font-size: 18px"> People Trained</p> 
+           </div>
+
+           <div class="col-2   border border-5 border-dark" id="smallbox" >
+               <h3 style="font-size: 60px">80+</h3>
+               <p style="font-size: 18px">Businesses Funded</p>
+           </div>
+
+           <div class="col-2 border border-5  border-dark" id="smallbox">
+               <h3 style="font-size: 60px">30</h3>
+               <p style="font-size: 18px">Countries reached</p>
+           </div>
+
+           <div class="col-2  border border-5 border-dark" id="smallbox">
+               <h3 style="font-size: 60px">750+</h3>
+               <p style="font-size: 18px">Jobs Created</p>
+           </div>
+       </div>
+   </div>
 
 
 
