--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 	<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title> Navbar</title>
+	<title>MeltWater</title>
+   <link rel="icon" type="image/ico" href="./asset/favicon5.ico"> 
+
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index.css">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
+
 </head>
-<body>
+<body class="font">
 <nav class="navbar sticky-top navbar-expand-lg bg-light " >
 
 	<div class="container-fluid navbar-header">
@@ -243,8 +250,10 @@
                <p style="font-size: 18px">Countries reached</p>
            </div>
 
-           <div class="col-2  border border-5 border-dark" id="smallbox">
-               <h3 style="font-size: 60px">750+</h3>
+           <div class="col-2  border border-5 border-dark  text-wrap" id="smallbox">
+               <p class="h3 text- " style="font-size: 60px">
+                 750+
+               </p>
                <p style="font-size: 18px">Jobs Created</p>
            </div>
        </div>
