--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body class="font">
+<body>
 	<nav class="navbar sticky-top navbar-expand-lg bg-light ">
 
 		<div class="container-fluid navbar-header">
@@ -27,13 +27,13 @@
 				<img src="./asset/mestlogo.png">
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clementnav"
-				aria-controls="clementnav" aria-expanded="false" aria-label="Toggle navigation">
+				aria-controls="clementnav" aria-expanded="true" aria-label="Toggle navigation">
 
 				<span class="navbar-toggler-icon"></span>
 
 			</button>
 			<div id="clementnav" class="collapse navbar-collapse d-flex justify-content-end ">
-				<ul class="navbar-nav ">
+				<ul class="navbar-nav">
 
 					<li class="nav-item ">
 
@@ -44,7 +44,7 @@
 
 					<li class="nav-item dropdown">
 
-						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+						<a class="nav-link " href="#" role="button" data-bs-toggle="dropdown"
 							aria-expanded="false">
 							TRAINING
 						</a>
@@ -147,7 +147,7 @@
 					<!-- </button> -->
 
 					<!-- </form> -->
-
+				</ul>
 			</div>
 		</div>
 	</nav>
