--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	<nav class="navbar sticky-top navbar-expand-lg bg-light ">
+	<nav class="navbar sticky-top navbar-expand-lg  ">
 
 		<div class="container-fluid navbar-header">
 
@@ -32,7 +32,7 @@
 				<span class="navbar-toggler-icon"></span>
 
 			</button>
-			<div id="clementnav" class="collapse navbar-collapse d-flex justify-content-end ">
+			<div id="clementnav" class="collapse navbar-collapse  justify-content-end ">
 				<ul class="navbar-nav">
 
 					<li class="nav-item ">
@@ -63,7 +63,7 @@
 					</li>
 
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+						<a class="nav-link " href="#" role="button" data-bs-toggle="dropdown"
 							aria-expanded="false">
 							FUNDING AND ACCELERATORS
 						</a>
@@ -81,7 +81,7 @@
 						</ul>
 					</li>
 					<li class="nav-item dropdown ">
-						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+						<a class="nav-link " href="#" role="button" data-bs-toggle="dropdown"
 							aria-expanded="false">
 							COMMUNITY
 						</a>
@@ -101,7 +101,7 @@
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+						<a class="nav-link " href="#" role="button" data-bs-toggle="dropdown"
 							aria-expanded="false">
 							NEWS & RESOURCES
 						</a>
@@ -122,31 +122,6 @@
 							PARTNERSHIPS
 						</a>
 					</li>
-					<!-- <li class="nav-item dropdown" id="dropdown"> -->
-					<!-- <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"aria-expanded="false"> -->
-					<!-- Library -->
-					<!-- </a> -->
-					<!-- <ul class="dropdown-menu bg-primary"> -->
-					<!-- <li> -->
-					<!-- /<a class="dropdown-item" href="#"> Books</a> -->
-					<!-- </li> -->
-					<!-- <li> -->
-					<!-- <a class="dropdown-item" href="#"> Pens</a> -->
-					<!-- </li> -->
-					<!-- <li> -->
-					<!-- <a class="dropdown-item" href="#"> Papers</a> -->
-					<!-- </li> -->
-
-					<!-- </ul> -->
-					<!-- </li> -->
-					<!-- </ul> -->
-					<!-- <form class="d-flex" role="search"> -->
-					<!-- <input type="search" placeholder=" search" aria-label="search"> -->
-					<!-- <button class="btn btn-outline-danger" type="submit"> search -->
-
-					<!-- </button> -->
-
-					<!-- </form> -->
 				</ul>
 			</div>
 		</div>
@@ -158,10 +133,10 @@
 			</video>
 
 			<div id="div1">
-
-				<strong>
-					Become a globally <br> successful tech <br> entrepreneur <br>
-				</strong>
+			
+			<p class="display-3">
+				Become a globally <br> successful tech <br> entrepreneur <br>
+			</p>
 
 				<button class="btn bg-info" style="padding: 10px 40px">
 					<a style="color: white; 
@@ -174,7 +149,7 @@
 		</div>
 	</section>
 
-	<div class="container " id="div2">
+	<!-- <div class="container " id="div2">
 		<h3 id="head"> What we do </h3>
 		<p>MEST is an Africa-wide technology enterpreneur training program, internal seed fund, and network of hubs
 			offering incubation for technology startups in Africa. </p>
@@ -271,10 +246,11 @@
 				<p style="font-size: 18px">Jobs Created</p>
 			</div>
 		</div>
-	</div>
+	</div> --> -->
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
 		crossorigin="anonymous"></script>
 </body>
 
-</html>
+</html> -->
