editing the impact div.

--- a/index.html
+++ b/index.html
@@ -222,31 +222,29 @@
 
 			<div class=" col-md-2 col-sm-2 col-lg-2 border border-5 border-dark" id="smallbox">
 
-				<h3 style="font-size: 60px">1000+</h3>
+				<h3 class="hd3">1000+</h3>
 
-				<p style="font-size: 18px"> People Trained</p>
+				<p class="para2"> People Trained</p>
 			</div>
 
 			<div class=" col-md-2 col-sm-2 col-lg-2 col-xl-2 border border-5 border-dark" id="smallbox">
-				<h3 style="font-size: 60px">80+</h3>
-				<p style="font-size: 18px">Businesses Funded</p>
+				<h3 class="hd3">80+</h3>
+				<p class="para2">Businesses Funded</p>
 			</div>
 
 			<div class=" col-md-2  col-sm-2 col-lg-2 col-xl-2 border border-5  border-dark" id="smallbox">
-				<h3 style="font-size:60px">30</h3>
-				<p style="font-size: 18px">Countries reached</p>
+				<h3 class="hd3">30</h3>
+				<p class="para2">Countries reached</p>
 			</div>
 
 			<div class=" col-md-2 col-sm-2 col-lg-2 col-xl-2 border border-5 border-dark" id="smallbox">
-				<p class="h3 text- " style="font-size: 3.5rem">
-					750+
-				</p>
-				<p style="font-size: 18px">Jobs Created</p>
+				<h3 class="hd3"> 750+ </h3>
+				<p class="para2">Jobs Created</p>
 			</div>
 		</div>
 	</div>
-	
-	<div>
+
+	<div class="container-fluid">
 	
 	</div>
 
