--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+		integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+		integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
@@ -44,8 +50,7 @@
 
 					<li class="nav-item dropdown">
 
-						<a class="nav-link " href="#" role="button" data-bs-toggle="dropdown"
-							aria-expanded="false">
+						<a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 							TRAINING
 						</a>
 
@@ -63,8 +68,7 @@
 					</li>
 
 					<li class="nav-item dropdown">
-						<a class="nav-link " href="#" role="button" data-bs-toggle="dropdown"
-							aria-expanded="false">
+						<a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 							FUNDING AND ACCELERATORS
 						</a>
 
@@ -81,8 +85,7 @@
 						</ul>
 					</li>
 					<li class="nav-item dropdown ">
-						<a class="nav-link " href="#" role="button" data-bs-toggle="dropdown"
-							aria-expanded="false">
+						<a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 							COMMUNITY
 						</a>
 						<ul class="dropdown-menu">
@@ -101,8 +104,7 @@
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link " href="#" role="button" data-bs-toggle="dropdown"
-							aria-expanded="false">
+						<a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 							NEWS & RESOURCES
 						</a>
 						<ul class="dropdown-menu">
@@ -136,8 +138,8 @@
 				<p class="h2">
 					Become a globally <br> successful tech <br> entrepreneur <br>
 				</p>
-			<button class="btn bg-info">
-				<a href="#" class="link"> Apply</a>
+				<button class="btn bg-info">
+					<a href="#" class="link"> Apply</a>
 				</button>
 			</div>
 
@@ -214,11 +216,11 @@
 
 		</div>
 	</div>
-	<div class="container-fluid " style="height: 80vh">
+	<div class="container-fluid" id="maincontainer">
 
 		<div id="impact" class="border-bottom border-dark "> Our impact </div>
 
-		<div class="container-fluid row justify-content-center" style="height: 40vh" id="bigbox">
+		<div class="container-fluid row justify-content-center" id="bigbox">
 
 			<div class=" col-md-2 col-sm-2 col-lg-2 border border-5 border-dark" id="smallbox">
 
@@ -244,14 +246,109 @@
 		</div>
 	</div>
 
-	<div class="container-fluid">
+	<div class="container-fluid" id="youtubediv">
+		<div class="alumni">
+			<p class="h3" id="alumni"> Alumni success story</p>
+		</div>
+		<div class="youtubecontainer">
+			<div class="youtube">
+				<iframe id="iyou" width="400" height="256" src="https://www.youtube.com/embed/HxSj5YrQ40c"
+					title="ALUMNI SPOTLIGHT: Seth Akumani" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen></iframe>
+			</div>
+			<div class="youtube">
+				<iframe id="iyou" width="400" height="256" src="https://www.youtube.com/embed/zXmqnw8GD6o"
+					title="ALUMNI SPOTLIGHT: Richard Brandt" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen></iframe>
+			</div>
+			<div class="youtube">
+				<iframe id="iyou" width="400" height="256" src="https://www.youtube.com/embed/n946v90SEU4"
+					title="Alumni Spotlight: Lady-Omega Hammond" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen></iframe>
 	
+			</div>
+		</div>
+		<button class="but">
+			Get Inspired
+		</button>
 	</div>
+	
+	
+	<div class="carousel">
+		<p class="h3" id="portfolio">
+			Our Portfolio
+		</p>
+		<p id="portfolio2"> 80+ software companies tackling Africa's biggest problems across industries</p>
+		<div class="owl-carousel">
+			<img class="owl-image" src="./asset/mestbranchlogo.4.png">
+			<img class="owl-image" src="./asset/mestbranchlogo.jpg">
+			<img class="owl-image" src="./asset/mestbranchlogo0.jpg">
+			<img class="owl-image" src="./asset/mestbranchlogo1.jpg">
+			<img class="owl-image" src="./asset/mestbranchlogo3.jpg">
+			<img class="owl-image" src="./asset/mestbranchlogo5.jpg">
+			<img class="owl-image" src="./asset/mestbranchlogo6.jpg">
+			<img class="owl-image" src="./asset/mestbranchlogo7.jpg">
+			<img class="owl-image" src="./asset/mestbranchlogo8.jpg">
+			<img class="owl-image" src="./asset/mestbranchlogo9.jpg">
+			<img class="owl-image" src="./asset/mestbranchlogo11.jpg">
+			<img class="owl-image" src="./asset/mestbranchlogo12.jpg">
+			<img class="owl-image" src="./asset/mestbranchlogo13.jpg">
+			<img class="owl-image" src="./asset/mestbranchlogo15.png">
+			<img class="owl-image" src="./asset/mestbranchlogo16.png">
+	
+		</div>
+	</div>
+
+	<div>
+		 
+	</div>
+
+
+
+
+
+
+
+
+
+
 
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
 		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+		integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"> </script>
+	
+	<script>
+		$(document).ready(function () {
+			$(".owl-carousel").owlCarousel({
+				autoplay: true,
+				loop: true,
+				margin: 10,
+				responsiveClass: true,
+				responsive: {
+					0: {
+						items: 3,
+						nav: true
+					},
+					600: {
+						items: 6,
+						nav: false
+					},
+					1000: {
+						items: 6,
+						nav: true,
+						loop: true
+					}
+				}
+			});
+		});
+	</script>
 </body>
 
 </html>
