editing the carousel

--- a/index.html
+++ b/index.html
@@ -381,10 +381,10 @@
 		Latest Updates
 </div>
 
-    <div class="carousel-card container ">
+    <div class="carousel-card container  ">
       <div id="two" class="owl-carousel">
         <div class="row">
-          <div class="col col-md-4 col-sm-3" style="position: relative;">
+          <div class="col col-md-4 col-sm-2" style="position: relative;">
 			<div class="card card-hover" style="width: 24rem; height: 20rem;">
 
 			</div>
@@ -397,7 +397,7 @@
               </div>
             </div>
           </div>
-          <div class="col col-md-4" style="position:relative ;">
+          <div class="col col-md-4 col-sm-2" style="position:relative ;">
 			<div class="card card-hover" style="width: 24rem; height: 20rem;">
 
 			</div>
@@ -405,12 +405,12 @@
               <img src="./asset/blog.png" class="card-img-top" />
               <div class="card-body">
                 <p class="card-text">
-                  Mest Training Program Updates - Extension & New Dates
+                  hello there how are you. i will complete it later.
                 </p>
               </div>
             </div>
           </div>
-          <div class="col col-md-4 col-sm-3 " style="position: relative ;">
+          <div class="col col-md-4 col-sm-2 " style="position: relative ;">
 			<div class="card card-hover" style="width: 24rem; height: 20rem;">
 
 			</div>
@@ -425,7 +425,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col col-md-4 col-sm-3" style="position:relative ;">
+          <div class="col col-md-4 col-sm-2" style="position:relative ;">
 			<div class="card card-hover" style="width: 24rem; height: 20rem;">
 
 			</div>
@@ -438,7 +438,7 @@
               </div>
             </div>
           </div>
-          <div class="col col-md-4 col-sm-3" style="position:relative ;">
+          <div class="col col-md-4 col-sm-2" style="position:relative ;">
 			<div class="card card-hover" style="width: 24rem; height: 20rem;">
 
 			</div>
@@ -451,7 +451,7 @@
               </div>
             </div>
           </div>
-          <div class="col col-md-4 col-sm-3" style="position: relative;">
+          <div class="col col-md-4 col-sm-2" style="position: relative;">
 			<div class="card card-hover" style="width: 24rem; height: 20rem;">
 
 			</div>
@@ -466,7 +466,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col col-md-4 col-sm-3" style="position: relative ;">
+          <div class="col col-md-4 col-sm-2" style="position: relative ;">
 			<div class="card card-hover" style="width: 24rem; height: 20rem;">
 				</div>
             <div class="card" style="width: 24rem">
@@ -478,7 +478,7 @@
               </div>
             </div>
           </div>
-          <div class="col col-md-4 col-sm-3" style="position:relative;">
+          <div class="col col-md-4 col-sm-2" style="position:relative;">
 			<div class="card card-hover" style="width: 24rem; height: 20rem;"> 
 				</div>
             <div class="card" style="width: 24rem">
@@ -490,7 +490,7 @@
               </div>
             </div>
           </div>
-          <div class="col col-md-4 col-sm-3" style="position:relative ;">
+          <div class="col col-md-4 col-sm-2" style="position:relative ;">
 			<div class="card card-hover" style="width: 24rem; height: 20rem;">
 				</div>
             <div class="card" style="width: 24rem">
@@ -504,7 +504,35 @@
           </div>
         </div>
       </div>
+	  <button class="readbut">
+		Read More
+	  </button>
     </div>
+
+	<!-- <div class="prefooter ">
+		<div class="h4">
+			Join our community! 
+			<p>
+				News, Opportunity & Updates!
+			</p>
+		</div>
+		<form action=""></form>
+	</div> -->
+
+	
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script
@@ -518,6 +546,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+
 
     <script>
       $(document).ready(function () {
