about to code the forms

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 		Latest Updates
 </div>
 
-    <div class="carousel-card container  ">
+    <div class="carousel-card container" id="concar">
       <div id="two" class="owl-carousel">
         <div class="row">
           <div class="col col-md-4 col-sm-2" style="position: relative;">
@@ -504,20 +504,23 @@
           </div>
         </div>
       </div>
-	  <button class="readbut">
-		Read More
-	  </button>
     </div>
 
-	<!-- <div class="prefooter ">
-		<div class="h4">
+  <div >
+    <button class="readbut">
+		Read More
+	  </button>
+  </div>
+
+	 <div class="prefooter ">
+		<div class="h4" id="ourcom">
 			Join our community! 
-			<p>
+			<p class="oppor">
 				News, Opportunity & Updates!
 			</p>
 		</div>
-		<form action=""></form>
-	</div> -->
+    </div>
+		 
 
 	
 
@@ -583,7 +586,7 @@
               nav: false,
             },
             600: {
-              items: 6,
+              items: 3,
               nav: false,
             },
             1000: {
