--- a/index.html
+++ b/index.html
@@ -519,6 +519,19 @@
 				News, Opportunity & Updates!
 			</p>
 		</div>
+    <form class="formin">
+  <div class="input">
+    <input type="email" class="form-control"  aria-describedby="emailHelp" placeholder="Email Address*">
+  </div>
+  <div class="input">
+    <input type="text" class="form-control"  placeholder="First Name">
+  </div>
+  <div  class="input">
+    <input type="text" class="form-control"  placeholder="Last Name">
+  
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
     </div>
 		 
 
