--- a/index.html
+++ b/index.html
@@ -530,9 +530,15 @@
     <input type="text" class="form-control"  placeholder="Last Name">
   
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit"  id="btnsub">Subscribe</button>
 </form>
     </div>
+
+    <footer>
+    <div style="height: 25vh ;">
+       
+    </div>
+    </footer>
 		 
 
 	
