--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap"
       rel="stylesheet"
     />
     <link
@@ -535,9 +535,37 @@
     </div>
 
     <footer>
-    <div style="height: 25vh ;">
-       
+    <div class="finaldiv">
+       <img src="./asset/mestlogo.png"   class="footimg" >
+       <p class="parafoot">
+        MEST 2021. All rights reserved
+       </p>
+
+         <ul class="listfoot1">
+      <li class="listfoot">
+        <a href="#" class="linkfoot">About</a>
+      </li>
+      <li class="listfoot">
+        <a href="#" class="linkfoot">Careers</a>
+      </li>
+      <li class="listfoot">
+        <a href="#" class="linkfoot">Contact</a>
+      </li>
+    </ul>
+
+    <ul class="ulfoot">
+      <li class="lifoot">
+        <a href="#Team" class="linkfoot"> Team</a>
+      </li>
+      <li class="lifoot">
+        <a href="#" class="linkfoot">Join our community!</a>
+      </li>
+    </ul>
+
+
     </div>
+
+  
     </footer>
 		 
 
