--- a/index.html
+++ b/index.html
@@ -561,8 +561,21 @@
         <a href="#" class="linkfoot">Join our community!</a>
       </li>
     </ul>
-
-
+<div class="imgdiv">
+<a href="#" class="linkfoot"><img src="./asset/instagram.png"  class="finalimg"></a>
+<a href="#" class="linkfoot"><img src="./asset/facebook.png"  class="finalimg"></a>
+<a href="#" class="linkfoot"><img src="./asset/twitter.png"  class="finalimg"></a>
+<a href="#" class="linkfoot"><img src="./asset/youtube.png"  class="finalimg"></a>
+<a href="#" class="linkfoot"><img src="./asset/medium1.png" class="finalimg"></a>
+</div>
+<ul class="final">
+  <li class="lifoot2">
+    <a href="#" class="linkfoot"> Cookie Policy</a>
+  </li>
+  <li class="lifoot2">
+    <a href="#" class="linkfoot">Privacy Policy</a>
+  </li>
+</ul>
     </div>
 
   
